# amiarcadia

./: .gitignore  .gitlab-ci.yml  Makefile  README.md
DroidArcadia/: gradle.properties  local.properties  settings.gradle
DroidArcadia/app/: build.gradle
DroidArcadia/app/src/main/: AndroidManifest.xml
DroidArcadia/app/src/main/cpp/: 2650.c  CMakeLists.txt  android.c  arcadia.c  arcadia.h  coin-ops.c  da.h  elektor.c  elektor.h  engine.h  formats.c  games.h  interton.c  malzak.c  overlays.h  pvi.c  rc_client.c  zaccaria.c  zaccaria.h
DroidArcadia/app/src/main/cpp/rcheevos/: operand.c
DroidArcadia/app/src/main/java/com/amigan/droidarcadia/: AboutActivity.java  ArcadiaHiScoresActivity.java  CoinOpHiScoresActivity.java  DIPsActivity.java  GameInfoActivity.java  LeftTouchView.java  MainActivity.java  NetworkUtil.java  OptionsActivity.java  RAActivity.java  RightTouchView.java
DroidArcadia/app/src/main/res/layout/: activity_about.xml  activity_arcadiahiscores.xml  activity_coinophiscores.xml  activity_dips.xml  activity_gameinfo.xml  activity_main.xml  activity_options.xml  activity_raoptions.xml  customtoast.xml  leftvs.xml  rightvs.xml
DroidArcadia/app/src/main/res/layout-land/: activity_arcadiahiscores.xml  activity_dips.xml  activity_main.xml  activity_options.xml
DroidArcadia/app/src/main/res/values/: strings.xml  themes.xml
DroidArcadia/app/src/main/res/values-de/: strings.xml
DroidArcadia/app/src/main/res/values-el/: strings.xml
DroidArcadia/app/src/main/res/values-es/: strings.xml
DroidArcadia/app/src/main/res/values-fr/: strings.xml
DroidArcadia/app/src/main/res/values-it/: strings.xml
DroidArcadia/app/src/main/res/values-nl/: strings.xml
DroidArcadia/app/src/main/res/values-pl/: strings.xml
DroidArcadia/gradle/wrapper/: gradle-wrapper.properties
WinArcadia/: 2650.c  DINPUT.H  RA_Consoles.h  RA_Emulators.h  RA_Interface.cpp  RA_Interface.h  aa.h  aa_strings.h  arcadia.c  arcadia.h  assembler.c  binbug.c  binbug.h  blucross.cur  cd2650.c  cd2650.h  codecomments.h  coin-ops.c  datacomments.h  debugger.c  disasm.c  elektor.c  elektor.h  engine1.c  engine1.h  engine2.c  engine3.c  engine3.h  exos.c  fd1771.c  ff.c  formats.c  games.h  gfx.c  gui.c  hqx.c  ibm.c  ibm.h  instruct.c  instruct.h  (+45 more)
jni/: Android.mk
src/: libretro.c
test/: conftest.py  helpers.py  run_tests.sh  test_api_compliance.py  test_audio.py  test_audio_nonsilent.py  test_core_options.py  test_input.py  test_input_descriptors.py  test_lifecycle.py  test_memory.py  test_rcheevos_memory.py  test_smoke.py  test_video.py
